K3S/NextCloud/01 - namespace.yaml
# Create the Nextcloud Namespace (if not exist)

kind: Namespace
apiVersion: v1
metadata:
 name: nextcloud
 labels:
   name: nextcloud
