K3S/NextCloud/06 - deployment-postgresql.yaml
# Create the PostgreSQL Deployment for NextCloud.
# This deployment will run a PostgreSQL database for the NextCloud application.
# It uses the official PostgreSQL 15 image and sets environment variables for the database name, user, and password using the Kubernetes Secret created in the previous step.
# The deployment also defines a volume for persistent storage of the database data, which is mounted to the appropriate directory in the container.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: nextcloud
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-pvc
