K3S/NextCloud/14 - deployment-nextcloud.yaml
# This file is used to create the Kubernetes Deployment for NextCloud.
# It defines the desired state of the NextCloud application, including the number of replicas, container image, environment variables, and volume mounts.
# The deployment will ensure that the specified number of NextCloud instances are running and will manage updates and rollouts.
# NOTE: Make sure to adjust the environment variables and other settings as needed for your specific deployment scenario.

# Create the App Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:production-apache
          name: nextcloud
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-appdata-storage
              readOnly: false
            - mountPath: /mnt/data
              name: nextcloud-userdata-storage
              readOnly: false
      volumes:
        - name: nextcloud-appdata-storage
          persistentVolumeClaim:
            claimName: nextcloud-appdata-pvc
        - name: nextcloud-userdata-storage
          persistentVolumeClaim:
            claimName: nextcloud-userdata-pvc
